src/test/deca/codegen/invalid/heapoverflow.deca
// Description:
//    Boucle qui alloue des objets pour remplir le tas.
//
// Resultats:
//    Erreur : La tas est plein.
//

class A {}

{
    while(true) {
        new A();
    }
}